# emergence

./: .gitignore  .vercelignore  Cargo.toml  LICENSE  README.md  now.json  rustfmt.toml  test.em  vercel.json
api/: compile.rs  compiler.rs
api/_utils/: assembler.rs  assigner.rs  builder.rs  data.rs  dna.rs  dna_maker.rs  error.rs  genetic_circuit.rs  helpers.rs  kd_tree.rs  lexer.rs  logic_circuit.rs  mod.rs  parser.rs  simulator.rs
api/_utils/components/: gene.rs  mod.rs
api/_utils/devices/: gate.rs  mod.rs
api/_utils/genetic_circuit/: actuator.rs  component.rs  gene.rs  mod.rs  signal.rs
api/_utils/logic_circuit/: device.rs  gate.rs  input.rs  mod.rs  output.rs
datasets/: gates.json  inputs.json  outputs.json  trees.json
src/: _builder.rs  _kd_tree.rs  _lexer.rs  _parser.rs  _utils.rs  assigner.rs  lib.rs  test.rs
src/dna/: mod.rs
src/genetic_circuit/: assigner.rs  gene.rs  mod.rs
src/logic_circuit/: builder.rs  device.rs  gate.rs  input.rs  mod.rs  output.rs
src/parser/: mod.rs
src/utils/: data.rs  error.rs
static/: gates.json  genes.json  inputs.json  parts.json  roadblock.json  rules.json  tree.json
