[package]
name = "index"
version = "0.2.0"
authors = [ "Filip Lazovic <lazoviccorp@gmail.com>" ]
edition = "2018"

[dependencies]
fs_extra = "1.1.0"
meval = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
regex = "1"
once_cell = "1.3.1"
lambda_runtime = "0.2.1"
base64 = "0.10"
chrono = "0.4"
colors-transform = "0.2.11"

[[bin]]
name = "compile"
path = "api/compile.rs"
